// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom provider 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp_1.1.0_amd64.deb",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp_1.1.0_amd64.deb",
          },
        ],
        "path": "TestApp_1.1.0_amd64.deb",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`dotted s3 bucket 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
  ],
}
`;

exports[`generic, github and spaces 1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "alpha-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    {
      "file": "alpha-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    {
      "file": "beta-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    {
      "file": "beta-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "TestApp-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`generic, github and spaces 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSAudioCaptureUsageDescription": "This app needs access to audio capture",
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`github and spaces (publishAutoUpdate) 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.AppImage",
      "safeArtifactName": "TestApp-1.1.0-x86_64.AppImage",
      "updateInfo": {
        "blockMapSize": "@blockMapSize",
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-linux.yml",
      "fileContent": {
        "files": [
          {
            "blockMapSize": "@blockMapSize",
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-x86_64.AppImage",
          },
        ],
        "path": "TestApp-1.1.0-x86_64.AppImage",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`mac artifactName  1`] = `
{
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW_1.1.0_mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW_1.1.0_mac.zip.blockmap",
      "safeArtifactName": "Test App ßW_1.1.0_mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW_1.1.0_mac.zip",
          },
        ],
        "path": "Test App ßW_1.1.0_mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW_1.1.0_mac.zip",
          },
        ],
        "path": "Test App ßW_1.1.0_mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`mac artifactName  2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`os macro 1`] = `
{
  "linux": [
    {
      "arch": "x64",
      "file": "TestApp-1.1.0.zip",
    },
  ],
  "mac": [
    {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    {
      "file": "latest-mac.yml",
      "fileContent": {
        "files": [
          {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.1.0-mac.zip",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
  ],
}
`;

exports[`os macro 2`] = `
{
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "ElectronAsarIntegrity": {
    "Resources/app.asar": {
      "algorithm": "SHA256",
      "hash": "hash",
    },
  },
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": {
      "127.0.0.1": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSAudioCaptureUsageDescription": "This app needs access to audio capture",
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrefersDisplaySafeAreaCompatibilityMode": false,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`os macro 3`] = `
[
  "latest/mac/Test App ßW-1.1.0-mac.zip",
  "latest/mac/Test App ßW-1.1.0-mac.zip.blockmap",
  "latest/mac/latest-mac.yml",
  "latest/linux/TestApp-1.1.0.zip",
]
`;
